# deruster

./: .gitignore  LICENSE  README.md  pyproject.toml
deruster/: binary.py  dataset.py  model.py  run.py
deruster/scripts/: compile.py  generate.py  jsonify.py  run.py  split.py  split_funcs.py  train.py
