[project]
name = "deruster"
version = "0.1.0"
description = "A Python project"
dependencies = [ "torch", "numpy", "tqdm",]
[[project.authors]]
name = "Lorenzo Colombini"

[build-system]
requires = [ "setuptools >= 61.0",]
build-backend = "setuptools.build_meta"

[project.scripts]
run = "deruster.scripts.run:main"

[project.license]
file = "LICENSE"

[tool.setuptools.packages.find]
include = [ "deruster", "deruster.*",]
