[project]
name = "deruster"
version = "0.1.0"
description = "A Python project"
dependencies = [ "torch", "numpy", "tqdm", "tiktoken", "matplotlib", "argparse", "transformers", "protobuf", "sentencepiece", "tree_sitter", "tree_sitter", "tree-sitter-rust",]
[[project.authors]]
name = "Lorenzo Colombini"

[build-system]
requires = [ "setuptools >= 61.0",]
build-backend = "setuptools.build_meta"

[project.scripts]
run = "deruster.scripts.run:run"
train = "deruster.scripts.train:train"
generate = "deruster.scripts.generate:generate_dataset"
compile = "deruster.scripts.compile:compile"
split = "deruster.scripts.split:split"

[project.license]
file = "LICENSE"

[tool.setuptools.package-dir]
deruster = "deruster"
